src/test/resources/tokens/invalid/method_descriptor_void_parameter.unpick
unpick v3
target_method foo.Bar baz (V)I